Commit: Contract + Implementations